fix(community-wall): adjust width and spacing
See: #1

--- a/src/styles/components/community-card.scss
+++ b/src/styles/components/community-card.scss
@@ -1,8 +1,9 @@
 .c-community-card {
   text-align: center;
-  margin: 40px 20px;
+  margin: 40px;
   box-shadow: 0 2px 26px 1px rgba(0,0,0,0.07);
   border-radius: 4px;
+  width: 390px;
   &--gray {
     background-color: $gray-4;
   }
