--- a/src/styles/components/community-wall.scss
+++ b/src/styles/components/community-wall.scss
@@ -1,6 +1,5 @@
 .c-community-wall {
   display: flex;
-  justify-content: center;
   &__intro {
     padding: 20px;
   }
